k8s/redis.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: redis
  name: redis
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    run: redis
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: redis
    spec:
      containers:
      - name: redis
        image: redis
        ports:
        - containerPort: 6379
