k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  tls:
  - hosts:
    - annotations-328334-442dbba0442be6c8c50f31ed96b00601-0000.us-east.containers.appdomain.cloud
    secretName: annotations-328334-442dbba0442be6c8c50f31ed96b00601-0000
  rules:
  - host: annotations-328334-442dbba0442be6c8c50f31ed96b00601-0000.us-east.containers.appdomain.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 443
